--- a/numpy-basics.ipynb
+++ b/numpy-basics.ipynb
@@ -92,6 +92,90 @@
     "# array([[0., 0., 0.],\n",
     "#       [0., 0., 0.]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d8e32678",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9, 9, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Important difference between numpy array and python array is that numpy supports broadcasting\n",
+    "# Using broadcasting we can reassign multiple values at once\n",
+    "nums_list = np.array([1, 2, 3, 4, 5])\n",
+    "nums_list[0:2] = 9\n",
+    "nums_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "62c3eeea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 3],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Some more advanced selections\n",
+    "nums_arr_matrix = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "# Below 2 lines will produce the same result\n",
+    "print(nums_arr_matrix[1][1]) # 5\n",
+    "print(nums_arr_matrix[1,1]) # 5\n",
+    "nums_arr_matrix[:2, 1:] # take the first 2 elements and from them take everything starting from the second element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "10fa447b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5, 7, 9])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Conditional selection\n",
+    "full_list = np.arange(1, 11)\n",
+    "odd_list = full_list[full_list % 2 != 0]\n",
+    "odd_list"
+   ]
   }
  ],
  "metadata": {
