improve comments for movie ratings project

--- a/Project-MovieRatings/movie-ratings.ipynb
+++ b/Project-MovieRatings/movie-ratings.ipynb
@@ -99,7 +99,9 @@
    "id": "f8bf7116",
    "metadata": {},
    "source": [
-    "**Preview the Fake company data**"
+    "**Preview the Fake company data**\n",
+    "\n",
+    "If we expect all the data one thing we can easily notice is the round up of RATING in the STARS column. For example 3.6 would be rounded to 4, not to 3.5"
    ]
   },
   {
@@ -229,7 +231,9 @@
    "id": "6d15f65d",
    "metadata": {},
    "source": [
-    "**Calculation of the correlation between the columns**"
+    "**Calculation of the correlation between the columns**\n",
+    "\n",
+    "We can notice here small discrepancy between STARS and RATING, they are not perfectly correlated."
    ]
   },
   {
@@ -308,7 +312,9 @@
    "id": "60e07fce",
    "metadata": {},
    "source": [
-    "**Here we will extract the movie year from the title and set the year as a separate column. And then we display the number of movies for each year.**"
+    "**Here we will extract the movie year from the title and set the year as a separate column. And then we display the number of movies for each year.**\n",
+    "\n",
+    "We don't really need the year column to prove our theory for the cheating company. This is just for an exercise to work with our data."
    ]
   },
   {
@@ -532,7 +538,9 @@
    "id": "c2836755",
    "metadata": {},
    "source": [
-    "**Display how many movies have zero votes**"
+    "**Display how many movies have zero votes**\n",
+    "\n",
+    "Displaying this data is also not needed to prove that the Fake company is cheating. This is also as an exercise and to get better understanding of the data we have"
    ]
   },
   {
@@ -582,7 +590,7 @@
    "source": [
     "**The Fake company is displaying the rating as stars which are rounded up. Let's visualize this difference in distributions.**\n",
     "\n",
-    "**We are displaying the distribution of ratings that are displayed (STARS) versus what the actual rating was from votes (RATING). Clip the KDEs to 0-5.**"
+    "We are displaying the distribution of ratings that are displayed (STARS) versus what the actual rating was from votes (RATING). Clip the KDEs to 0-5, because these are the only possible values we can have"
    ]
   },
   {
@@ -803,7 +811,13 @@
    "id": "8ac1b135",
    "metadata": {},
    "source": [
-    "**Display the number of times a certain difference occurs**"
+    "**Display the number of times a certain difference occurs**\n",
+    "\n",
+    "For example how many times the STARS were 0.1 points higher than the RATING. Also how many times 0.2 points higher etc...\n",
+    "\n",
+    "We can see that for around 100 of the movies the STARS and the RATING are the same, but for 1 of the movies the displayed stars are 1 higher than the rating\n",
+    "\n",
+    "We can also notice that we have many movies which are displaying higher number of STARS than RATING, because we have many movies in the columns which are with value 0.1 or higher"
    ]
   },
   {
@@ -843,7 +857,7 @@
    "id": "48824034",
    "metadata": {},
    "source": [
-    "**We can see from the plot that one movie was displaying over a 1 star difference than its actual rating! Display which movie it was**"
+    "**We can see from the plot that one movie was displaying over a 1 star difference than its actual rating! Let's display which movie it was**"
    ]
   },
   {
@@ -1106,7 +1120,9 @@
    "source": [
     "**Let's quantify this difference by comparing the critics ratings and the user ratings for Company1.**\n",
     "\n",
-    "**We will create a new column based off the difference between critics ratings and users ratings for Company1.**"
+    "We will create a new column based off the difference between critics ratings and users ratings for Company1.\n",
+    "\n",
+    "The higher positive value means, that the critics like the movie better than the users. This is because if critics gave score of 50 for a movie and users gave 40 we will have 50 - 40 = 10. And of course the bigger negative values means, that the users liked the movie better than the critics."
    ]
   },
   {
@@ -1457,7 +1473,7 @@
     "\n",
     "**Finally let's explore Company3. Notice that both Company2 and Company3 report back rating counts. Let's analyze the most popular movies.**\n",
     "\n",
-    "**Create a scatterplot for the relationship between rating counts on Company2 versus rating counts on Company3.**"
+    "Let's display scatterplot for the relationship between rating counts on Company2 versus rating counts on Company3"
    ]
   },
   {
@@ -1497,9 +1513,9 @@
    "id": "9e97f28d",
    "metadata": {},
    "source": [
-    "**Notice there are two outliers here. The first outlier with the highest rating count on Company3 only has about 500 Company2 ratings.**\n",
+    "**Notice there are two outliers here. The first outlier with the highest rating count on Company3 only has about 500 Company2 ratings. The second outlier has high count for both Company2 and Company3**\n",
     "\n",
-    "**Display the movie with highest Company3 user rating count**"
+    "**Display the first outlier - the movie with highest Company3 user rating count**"
    ]
   },
   {
@@ -1582,7 +1598,7 @@
    "id": "a1fb0bdd",
    "metadata": {},
    "source": [
-    "**Display the movie with highest Company2 user rating count**"
+    "**Display the second outlier - the movie with highest Company2 user rating count**"
    ]
   },
   {
@@ -1891,9 +1907,10 @@
     "\n",
     "Notice that Company1, Company2 and Company3 don't use a score between 0-5 stars like Fake company does. In order to do a fair comparison, we need to normalize these values so they all fall between 0-5 stars and the relationship between reviews stays the same.\n",
     "\n",
-    "Simple way to convert ratings:\n",
+    "Simple way to convert ratings to have everything on a scale 0-5:\n",
     "\n",
     "100 / 20 = 5\n",
+    "\n",
     "10 / 2 = 5"
    ]
   },
@@ -2122,7 +2139,7 @@
    "id": "496a2988",
    "metadata": {},
    "source": [
-    "**Now let's create a norm_scores DataFrame that only contains the normalizes ratings. Include both STARS and RATING from the original Fake company table.**"
+    "**Now let's create a norm_scores DataFrame that only contains the normalizes ratings. Including both STARS and RATING from the original Fake company table.**"
    ]
   },
   {
@@ -2247,9 +2264,9 @@
    "id": "af653e35",
    "metadata": {},
    "source": [
-    "### Comparing Distribution of Scores Across Sites\n",
+    "### Comparing Distribution of Scores Across Companies\n",
     "\n",
-    "Now the moment of truth! Does Fake company display abnormally high ratings? We already know it pushes displayed RATING higher than STARS, but are the ratings themselves higher than average?\n",
+    "Now the moment of truth! Does Fake company display abnormally high ratings? We already know it pushes displayed RATING higher than STARS, but are the ratings themselves higher than average compared to the other companies?\n",
     "\n",
     "Let's create a plot comparing the distributions of normalized ratings across all companies."
    ]
@@ -2299,7 +2316,9 @@
    "source": [
     "Clearly Fake Company has an uneven distribution. We can also see that Company1 critics have the most uniform distribution. Let's directly compare these two.\n",
     "\n",
-    "Let's create a KDE plot that compare the distribution of Company1 critic ratings against the STARS displayed by Fake company."
+    "Let's create a KDE plot that compare the distribution of Company1 critic ratings against the STARS displayed by Fake company.\n",
+    "\n",
+    "The below plot is similar to the above, but shows data only for the 2 columns (Fake company ratings and Company1 critics ratings) where we have big difference."
    ]
   },
   {
@@ -2616,7 +2635,9 @@
    "id": "d5a2e4d5",
    "metadata": {},
    "source": [
-    "Let's visualize the distribution of ratings across all companies for the top 10 worst movies."
+    "Let's visualize the distribution of ratings across all companies for the top 10 worst movies.\n",
+    "\n",
+    "We can see even for the 10 worst movies by Company1 critics, the Fake company is still displaying around 3.5-4 stars"
    ]
   },
   {
@@ -2641,6 +2662,14 @@
     "worst_films = norm_films.nsmallest(10, 'Company1_Norm').drop('MOVIE', axis=1)\n",
     "sns.kdeplot(data=worst_films, clip=[0,5], fill=True, palette='Set1')\n",
     "plt.title(\"Ratings for Company1 critic's 10 Worst Reviewed Movies\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5271e35",
+   "metadata": {},
+   "source": [
+    "Select from the 10 worst movies the movie with index 26. We will select that movie, because it has the highest number of stars (4.5) the Fake company is displaying to their customers."
    ]
   },
   {
