linear regression with scikit learn

--- a/LinearRegression/simple-linear-regression.ipynb
+++ b/LinearRegression/simple-linear-regression.ipynb
@@ -510,6 +510,14 @@
    "source": [
     "Is this better than our straight line fit? What are good ways of measuring this?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a43debdf",
+   "metadata": {},
+   "source": [
+    "**Continue learning with next notebook `linear-regression-scikit.ipynb` where things get more advanced than this.**"
+   ]
   }
  ],
  "metadata": {
