polynomial regression example

--- a/LinearRegression/linear-regression-scikit.ipynb
+++ b/LinearRegression/linear-regression-scikit.ipynb
@@ -1067,6 +1067,14 @@
    "source": [
     "loaded_model.predict(campaign)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a7953a8",
+   "metadata": {},
+   "source": [
+    "**Continue learning with next notebook `polynomial-regression-scikit.ipynb` where we will see how we can get more accurate results using polynomial regression.**"
+   ]
   }
  ],
  "metadata": {
