--- a/LinearRegression/polynomial-regression-scikit.ipynb
+++ b/LinearRegression/polynomial-regression-scikit.ipynb
@@ -915,6 +915,14 @@
    "source": [
     "final_model.predict(campaign_poly)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40d317cd",
+   "metadata": {},
+   "source": [
+    "Continue learning with next notebook `regularization-linear-regression.ipynb` where we will see using more techniques to get good results."
+   ]
   }
  ],
  "metadata": {
