info restructure for logistic model examples

--- a/MachineLearning/SupervisedLearning/LogisticRegression/logistic-regression.ipynb
+++ b/MachineLearning/SupervisedLearning/LogisticRegression/logistic-regression.ipynb
@@ -129,22 +129,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d4a9deba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b5304a59",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = df.drop('result', axis=1)\n",
     "y = df['result']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4a9deba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "id": "b1da5437",
    "metadata": {},
    "source": [
-    "## Logistic regression model"
+    "## Creating the model"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "id": "e7e52213",
    "metadata": {},
    "source": [
-    "## Model Performance on Classification Tasks"
+    "## Model Performance"
    ]
   },
   {
@@ -263,6 +263,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "add76c4d",
+   "metadata": {},
+   "source": [
+    "### Predictions on the test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c060aeae",
@@ -273,6 +281,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bdbc60a5",
+   "metadata": {},
+   "source": [
+    "### Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "63f5bdab",
@@ -280,6 +296,14 @@
    "outputs": [],
    "source": [
     "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e74ab7b9",
+   "metadata": {},
+   "source": [
+    "### Confusion matrix"
    ]
   },
   {
@@ -305,6 +329,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "330f1a8f",
+   "metadata": {},
+   "source": [
+    "### Classification report"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "faf5149f",
@@ -312,6 +344,24 @@
    "outputs": [],
    "source": [
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b218878",
+   "metadata": {},
+   "source": [
+    "### Precision score and Recall score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a4edfd4",
+   "metadata": {},
+   "source": [
+    "Precision score formula: `Precision = True Positives / (True Positives + False Positives)`\n",
+    "\n",
+    "Recall score formula: `Recall = True Positives / (True Positives + False Negatives)`"
    ]
   },
   {
