--- a/MachineLearning/SupervisedLearning/LogisticRegression/multi-class-logistic-regression.ipynb
+++ b/MachineLearning/SupervisedLearning/LogisticRegression/multi-class-logistic-regression.ipynb
@@ -101,22 +101,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dc9c2df0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1dd42787",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = df.drop('species', axis=1)\n",
     "y = df['species']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc9c2df0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "id": "8865f6dc",
    "metadata": {},
    "source": [
-    "## Multi-Class Logistic Regression Model"
+    "## Creating the model"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_model = LogisticRegression(solver='saga', multi_class=\"ovr\", max_iter=5000)"
+    "log_model = LogisticRegression(multi_class=\"ovr\", solver='saga', max_iter=5000)"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "penalty = ['l1', 'l2']\n",
     "C = np.logspace(0, 4, 10)\n",
     "\n",
-    "grid_model = GridSearchCV(log_model, param_grid={'C':C, 'penalty':penalty })"
+    "grid_model = GridSearchCV(log_model, param_grid={'C': C, 'penalty': penalty })"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "id": "ec66c75c",
    "metadata": {},
    "source": [
-    "## Model Performance on Classification Tasks"
+    "## Model Performance"
    ]
   },
   {
@@ -259,6 +259,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2789a16e",
+   "metadata": {},
+   "source": [
+    "### Predictions on the test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "61a0c14d",
@@ -269,6 +277,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0037ced4",
+   "metadata": {},
+   "source": [
+    "### Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "15215480",
@@ -276,6 +292,14 @@
    "outputs": [],
    "source": [
     "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "023873a0",
+   "metadata": {},
+   "source": [
+    "### Confusion matrix"
    ]
   },
   {
@@ -301,6 +325,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a03b892",
+   "metadata": {},
+   "source": [
+    "### Classification report"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b3c13c54",
@@ -315,7 +347,7 @@
    "id": "644148d6",
    "metadata": {},
    "source": [
-    "## Evaluating Curves and AUC"
+    "### ROC curve and AUC"
    ]
   },
   {
