--- a/MachineLearning/SupervisedLearning/RandomForests/random-forest_classification.ipynb
+++ b/MachineLearning/SupervisedLearning/RandomForests/random-forest_classification.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"penguins_size.csv\")\n",
+    "df = pd.read_csv(\"../../common-data/penguins_size.csv\")\n",
     "df = df.dropna()\n",
     "df.head()"
    ]
