update logisitic regression model examples

--- a/MachineLearning/SupervisedLearning/LogisticRegression/logistic-regression.ipynb
+++ b/MachineLearning/SupervisedLearning/LogisticRegression/logistic-regression.ipynb
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_model = LogisticRegression()"
+    "model = LogisticRegression()"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_model.fit(scaled_X_train, y_train)"
+    "model.fit(scaled_X_train, y_train)"
    ]
   },
   {
@@ -241,7 +241,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_model.coef_"
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "add76c4d",
+   "metadata": {},
+   "source": [
+    "## Predictions on the test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c060aeae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(scaled_X_test)"
    ]
   },
   {
@@ -264,28 +282,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add76c4d",
-   "metadata": {},
-   "source": [
-    "### Predictions on the test data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c060aeae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = log_model.predict(scaled_X_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bdbc60a5",
    "metadata": {},
    "source": [
     "### Accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ece0c6f5",
+   "metadata": {},
+   "source": [
+    "Shows the percent of correct predictions compared to the actual data in the test data."
    ]
   },
   {
