--- a/MachineLearning/SupervisedLearning/LogisticRegression/multi-class-logistic-regression.ipynb
+++ b/MachineLearning/SupervisedLearning/LogisticRegression/multi-class-logistic-regression.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_model = LogisticRegression(multi_class=\"ovr\", solver='saga', max_iter=5000)"
+    "model = LogisticRegression(multi_class=\"ovr\", solver='saga', max_iter=5000)"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "penalty = ['l1', 'l2']\n",
     "C = np.logspace(0, 4, 10)\n",
     "\n",
-    "grid_model = GridSearchCV(log_model, param_grid={'C': C, 'penalty': penalty })"
+    "grid_model = GridSearchCV(model, param_grid={'C': C, 'penalty': penalty })"
    ]
   },
   {
@@ -232,6 +232,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2789a16e",
+   "metadata": {},
+   "source": [
+    "## Predictions on the test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61a0c14d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = grid_model.predict(scaled_X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ec66c75c",
    "metadata": {},
    "source": [
@@ -246,34 +264,6 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report, ConfusionMatrixDisplay"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1aee7d25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_model.best_params_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2789a16e",
-   "metadata": {},
-   "source": [
-    "### Predictions on the test data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61a0c14d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = grid_model.predict(scaled_X_test)"
    ]
   },
   {
